[package]
name = "valve_kv_tools"
version = "0.2.0"
edition = "2021"
description = "Lossless Valve KeyValue parser, serializer and formatter"
documentation = "https://docs.rs/valve_kv_tools"
readme = "README.md"
repository = "https://github.com/Sarrus1/valve-kv-tools"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "valve-kv.pest"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
js-sys = "0.3.64"
pest = "2.6.0"
pest_derive = "2.6.0"
serde = { version = "1.0.164", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "=0.2.87", features = [
    "strict-macro",
    "serde-serialize",
] }

[dev-dependencies]
criterion = "0.3"
minreq = { version = "2.7.0", features = ["https"] }

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"